salesforce/force-app/main/default/objects/WFC27_Map__c/WFC27_Map__c.object-meta.xml
<CustomObject><deploymentStatus>Deployed</deploymentStatus><label>WFC27 Identity Map</label><nameField><displayFormat>MAP-{000000}</displayFormat><label>Identity Map Number</label><type>AutoNumber</type></nameField><pluralLabel>WFC27 Identity Maps</pluralLabel><sharingModel>ReadWrite</sharingModel></CustomObject>