salesforce/force-app/main/default/objects/WFC27_Map__c/fields/Last_Eligible__c.field-meta.xml
<CustomField><fullName>Last_Eligible__c</fullName><defaultValue>false</defaultValue><label>Last Eligible</label><type>Checkbox</type></CustomField>