salesforce/force-app/main/default/objects/WFC27_Map__c/fields/Last_Sent_At__c.field-meta.xml
<CustomField><fullName>Last_Sent_At__c</fullName><label>Last Sent At</label><type>DateTime</type></CustomField>