salesforce/force-app/main/default/objects/WFC27_Map__c/fields/Source_Object__c.field-meta.xml
<CustomField><fullName>Source_Object__c</fullName><label>Source Object</label><length>80</length><type>Text</type></CustomField>