salesforce/force-app/main/default/objects/WFC27_Map__c/fields/WP_Status__c.field-meta.xml
<CustomField><fullName>WP_Status__c</fullName><label>WordPress Status</label><length>20</length><type>Text</type></CustomField>